--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-	testImplementation 'org.springdoc:springdoc-openapi-webmvc-core:1.6.6'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
