Edit entities to use generated sequences instead of database auto increment. Add functionalities to order products. Remove activity.

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+sourceSets{
+	test{
+		java.srcDirs = ['src/test/java/intg']
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
